# input-form-dialog

./: .gitignore  CMakeLists.txt  InputFormDialog.cpp  InputFormDialog.h  InputFormDialog.pro  LICENSE  README.md
example/: main.cpp
python/: README.md  input_form_dialog.py  setup.py
python/src/: input_form_dialog.py
src/: InputFormDialog.cpp  InputFormDialog.h  SetColorButton.cpp  SetColorButton.h
